--- a/test/static/theme.css
+++ b/test/static/theme.css
@@ -105,7 +105,7 @@ code .support.dom {
 code .function,
 code .entity,
 code .property {
-  color: var(--orange);
+  color: var(--yellow);
 }
 
 code .parameter,
